--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ document._p
 
 <p>Full width:</p>
 <form class="example" action="/action_page.php">
-  <input type="text" placeholder="Search.." name="search">
+  <input id="seachbar" type="text" placeholder="Search.." name="search">
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
