--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 firstName: "Omer",
                 lastName: "Wexler",
                 screenSize: window.screen.width,
+                versionTest: 2.3322,
 
                 pageURL: window.location.href,
 
