--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 lastName: "Wexler",
                 screenSize: window.screen.width,
                 versionTest: 2.3322,
+                versionTest2: "2.332222"
 
                 pageURL: window.location.href,
 
