--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 firstName: "Omer",
                 lastName: "Wexler",
                 screenSize: window.screen.width,
-                
-                versionTest2: "2.332222",
+                versionTestFloat: 5.32,
+                versionTestText: "2.332222",
 
                 pageURL: window.location.href,
 
