--- a/index.html
+++ b/index.html
@@ -230,7 +230,12 @@ form.example input[type=text] {
   width: 20%;
   background: #f1f1f1;
 }
-
+#rec {
+    width: 80%;
+    background-color: gray;
+    margin-left: 10%;
+    border-radius: 20px;
+}
 form.example button {
   float: left;
   width: 10%;
