--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 screenSize: window.screen.width,
                 versionTestFloat: 5.32,
                 versionTestText: "2.332222",
+                isLive: true,
 
                 pageURL: window.location.href,
 
