--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   analytics.load("xKAOezkeNz2HNpftltJnarzIvNvJqkwh");
   analytics.page();
   }}();
+  analytics.identify("97980cfea0067", {
+  name: "Liam Wexler",
+  email: "Liiam@example.com",
+  plan: "baby",
+  logins: 5
+});
 </script>
 
 <script>
