--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   analytics.page();
   }}();
   analytics.identify("97980cfea0067", {
-  name: "Liam Wexler",
-  email: "Liiam@example.com",
-  plan: "baby",
-  logins: 5
+  nameSegment: "Liam Wexler",
+  emailSegment: "Liiam@example.com",
+  planSegment: "baby",
+  loginsSegment: 5
 });
 </script>
 
