--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         // Call this whenever information about your visitors becomes available
         // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
+          disableFeedback: true;
             visitor: {
                 id:              'A12345427',
                 town:             "Rishon LeZion", 
