--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@ function domReady() {
 
 function sendEvent(){
   
-  pendo.track("btnClick", {omer:'omer', date});
+  pendo.track("btnClick", {omer:'omer', accountId:'accountTrack'
+
+});
 }
 </script>
 <!-- Start of Async Drift Code -->
