--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <!--<button class="your-button-class" >Click Here</button>-->
 
 <button onclick="sendEvent()">Click me 3</button>
-<button onclick="pendo.track("btnClick", {omer:'omer', accountId:'accountTrack'
+<button onclick="pendo.track("btnClick", {omer:'omer', account_id:'accountTrack'
 
 });">Click me 4</button>
 <button>Click me 5</button>
