--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ function myFunction() {
 
 <br><br><br><br>
 
-<select id="carSelect">
+<select id="carSelect" pendoId = "1234">
   <option id='o1' value="lzZbrZ416zIV4w6ZKjJrOV6MmVY" >Volvo</option>
   <option id='o2' value="saab">Saab</option>
   <option id='o3' value="mercedes">Mercedes</option>
