--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 <button onclick="pendo.track("btnClick", {omer:'omer', account_id:'accountTrack'
 
 });">Click me 4</button>
-<button onclick="pendo.initialize({
+<button onclick="pendo.identify({
     visitor: {
         id: "dev1234",
         name: "Neo",
