--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
   <p>xxxxxxxxxxxxxx</p>
   <br><br>
 </div>
-
+<button id="untaggedButton">Untagged button</button>
 <label class="switch">
   <input type="checkbox">
   <span class="slider"></span>
