--- a/README.html
+++ b/README.html
@@ -10,10 +10,10 @@
         z=e.getElementsByTagName(n)[0];z.parentNode.insertBefore(y,z);})(window,document,'script','pendo');
 
         // Call this whenever information about your visitors becomes available
-        // Please use Strings, Numbers, or Bools for value types.
         pendo.initialize({
+
             visitor: {
-                id:              '2223314',
+                id:              'omeromer2',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
@@ -22,6 +22,7 @@
                 screenSize: window.screen.width,
                 versionTestFloat: 5.32,
                 versionTestText: "2.332222",
+                isLive: true,
 
                 pageURL: window.location.href,
 
@@ -36,7 +37,7 @@
             },
 
             account: {
-                id:           'a1221132', // Highly recommended
+                id:           'a1229132', // Highly recommended
                 name:         'account2',
                 countryCode: "Test 1",
                 // planLevel:    // Optional
