--- a/index.html
+++ b/index.html
@@ -412,5 +412,6 @@ function myFunction() {
   display: none!important;
 }
 body {width: 4000px;}
+#omer6 {position: absolute; right: 1500px;}
 </style>
 </body>
