--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ function myFunction() {
   
   <div id="omer6">
   <p>This is a text for testing the scroll bar</p>
-  <button>Click me 6</button>
+  <button id="scrollToButton">Click me 6</button>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>Text</p>
