--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ function myFunction() {
   <div style="width:300px; float:right;"><p>Text Text Text Text Text Text Text</p> </div>
 </div>
   
-  <div id="omer6">
+  <div id="omer6" class="classOmer6">
   <p>This is a text for testing the scroll bar</p>
   <button id="scrollToButton">Click me 6</button>
 </div>
