--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 versionTestFloat: 5.32,
                 versionTestText: "2.332222",
                 isLive: true,
+                referal: window.document.referrer;,
 
                 pageURL: window.location.href,
 
@@ -406,6 +407,10 @@ function myFunction() {
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <p>Text</p>
+  <script type="text/javascript">
+    
+    window.document.getElementById('omer6')
+  </script>
   
 <style>
 #drift-widget-container{
