--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 versionTestFloat: 5.32,
                 versionTestText: "2.332222",
                 isLive: true,
-                referal: window.document.referrer;,
+                referal: window.document.referrer,
 
                 pageURL: window.location.href,
 
