--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script type="text/javascript">
 
+pendo.track("number", {
+  PROPERTY1: "PROPERTY1VALUE",
+  PROPERTY2: "PROPERTY2VALUE",
+  PROPERTYN: "PROPERTYNVALUE",
+  
+});
 
+</script>
 
 function showGuide(e){
   pendo.showGuideById(e.target.value)
@@ -113,7 +120,10 @@ var observer = new MutationObserver(function(){
 observer.observe(targetNode, { attributes: true, childList: true });
 </script>
 <body onload="domReady">
-<h1> Test site</h1>
+<h1 class="siteTitle"> Test site</h1>
+<div class="numberToSend">
+  <p>5</p>
+  </div>
 
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
