--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ observer.observe(targetNode, { attributes: true, childList: true });
 </script>
 <body onload="domReady">
 <h1 class="siteTitle"> Test site</h1>
-<div id=="numberToSend">
+<div id="numberToSend">
   <p>5</p>
   </div>
 
