--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script type="text/javascript">
 
-pendo.track("number", {
+pendo.track("number"{
   likes: document.getElementById("numberToSend").textContent
   
   
