--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script type="text/javascript">
 
+function sendEvent2(){
 pendo.track("number"{
   likes: document.getElementById("numberToSend").textContent
   
   
 });
+}
+sendEvent2()
 
 </script>
 <script>
