--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@ observer.observe(targetNode, { attributes: true, childList: true });
   <input type="checkbox">
   <span class="slider round"></span>
 </label>
-sendEvent2()
+<script type="text/javascript">
+window.onload = sendEvent2()
+</script>
 <br>
 <a onclick="window.open('https://www.w3docs.com/')" class="link" >Computer Hope</a>
 <br>
