--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'omeromer3',
+                id:              'omeromer4',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
@@ -49,7 +49,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
                    // Required if user is logged in
-                 email:        'omer@pendo.io',
+                 email:        'omer43@pendo.io',
                 firstName:         'Omer2',
                 lastName:    'Wexler',
                 date: Date() 
@@ -58,8 +58,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             },
 
             account: {
-                id:           'a1229132', // Highly recommended
-                name:         'account2',
+                id:           'a1229138', // Highly recommended
+                name:         'account24',
                 countryCode: "Test 1",
                 // planLevel:    // Optional
                 // planPrice:    // Optional
