--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'omeromer4',
+                id:              'omeromer43',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
@@ -58,9 +58,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             },
 
             account: {
-                id:           'a1229138', // Highly recommended
+                id:           'a1229139', // Highly recommended
                 name:         'account24',
                 countryCode: "Test 1",
+                is_paying: false,    // Recommended if using Pendo Feedback
+                monthly_value: 0// Recommended if using Pendo Feedback
                 // planLevel:    // Optional
                 // planPrice:    // Optional
                 // creationDate: // Optional
