--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'omeromer43',
+                id:              'omeromer456',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
-                firstName: "Omer",
-                lastName: "Wexler",
+               
                 screenSize: window.screen.width,
                 versionTestFloat: 5.32,
                 versionTestText: "2.332222",
@@ -49,8 +48,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
                    // Required if user is logged in
-                 email:        'omer43@pendo.io',
-                firstName:         'Omer2',
+                 email:        'liam@pendo.io',
+                firstName:         'Liam',
                 lastName:    'Wexler',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
@@ -58,8 +57,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             },
 
             account: {
-                id:           'a1229139', // Highly recommended
-                name:         'account24',
+                id:           'a12291248', // Highly recommended
+                name:         'Liamco',
                 countryCode: "Test 1",
                 is_paying: false,    // Recommended if using Pendo Feedback
                 monthly_value: 0// Recommended if using Pendo Feedback
