--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 name:         'Liamco',
                 countryCode: "Test 1",
                 is_paying: false,    // Recommended if using Pendo Feedback
-                monthly_value: 0// Recommended if using Pendo Feedback
-                // planLevel:    // Optional
+                monthly_value: 0,// Recommended if using Pendo Feedback
+                planLevel: 'prospect'    // Optional
                 // planPrice:    // Optional
                 // creationDate: // Optional
 
