--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'omeromer456',
+                id:              'omeromer416',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
@@ -49,7 +49,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                    // Required if user is logged in
                  email:        'liam@pendo.io',
-                firstName:         'Liam',
+                firstName:         'Gaia',
                 lastName:    'Wexler',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
@@ -57,10 +57,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             },
 
             account: {
-                id:           'a12291248', // Highly recommended
-                name:         'Liamco',
+                id:           'a122916488', // Highly recommended
+                name:         'Gaiaco',
                 countryCode: "Test 1",
-                is_paying: false,    // Recommended if using Pendo Feedback
+                is_paying: 'prospect',    // Recommended if using Pendo Feedback
                 monthly_value: 0,// Recommended if using Pendo Feedback
                 planLevel: 'prospect'    // Optional
                 // planPrice:    // Optional
