--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
 
   <!-- Google Tag Manager -->
+  <script src="JS work.js"></script>
+
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -33,7 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'omeromer416',
+                id:              'Omeromer416',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
