--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ window.onload = sendEvent2()
   <br><br>
   <input type="submit" value="Submit">
 </form> 
-
+ <a href="#" onclick="pendo.feedback.openFeedback(event)">Submit a request</a>
 <h1>Display Radio Buttons</h1>
 
 <form action="/action_page.php">
