--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         pendo.initialize({
 
             visitor: {
-                id:              'Omeromer416',
+                id:              'testVisitorDelete',
                 town:             "Rishon LeZion", 
                 company_uuid: "fc35e2a2-c128-4223-a95e-6a99707a4732", 
                 test: "omerTest",
