--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
                    // Required if user is logged in
-                 email:        'liam@pendo.io',
+                 email:        'omer@pendo.io',
                 firstName:         'Gaia',
                 lastName:    'Wexler',
                 date: Date() 
