--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                    // Required if user is logged in
                  email:        'omer@pendo.io',
-                firstName:         'Gaia',
-                lastName:    'Wexler',
+                firstName:         'Omerr',
+                lastName:    'Wexlerr',
                 date: Date() 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
 
             account: {
-                id:           'a122916488', // Highly recommended
-                name:         'Gaiaco',
+                id:           'a121648', // Highly recommended
+                name:         'Gaico',
                 countryCode: "Test 1",
                 is_paying: 'prospect',    // Recommended if using Pendo Feedback
                 monthly_value: 0,// Recommended if using Pendo Feedback
