--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                  email:        'omer@pendo.io',
                 firstName:         'Omerr',
                 lastName:    'Wexlerr',
-                date: Date() 
+                date: Date(),
+                local: "es" 
                 // You can add any additional visitor level key-values here,
                 // as long as it's not one of the above reserved names.
             },
