--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   analytics.load("WyeDJ0Q4SCAvM9zuLcOhCILHi6YgQy1f");
   analytics.page();
   }}();
-</script>
 
+
+</script>
+<script type="text/javascript">
+  analytics.identify("97980cfea0067", {
+  name: "Peter Gibbons",
+  email: "peter@example.com",
+  plan: "premium",
+  logins: 5
+});
+</script>
 
 <script>
 (function(apiKey){
