--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
             }
+          location: {
+        transforms: [
+            {
+                'attr': 'search',
+                'action': 'Clear'
+            }]
              
            
 });
