--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         transforms: [
             {
                 'attr': 'search',
-                'action': 'Clear'
-            }
-        ]
-    }
+                'action': 'Clear',
+            },
+        ],
+    },
                        
            
 });
