--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
                    // Required if user is logged in
-                 email:        'omer@pendo.io',
+                 email:        'bh@hubspot.com',
                 firstName:         'Omerr',
                 lastName:    'Wexlerr',
                 
